<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/yes_no_quiz" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/txtWelcom"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:srcCompat="@drawable/startbtn2"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/userSetting"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnUserSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@null"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:srcCompat="@drawable/user32"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/hiScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hiScore"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/highScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highScoreStr"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textColor="@color/purple_200"
        android:layout_margin="4dp"/>

</LinearLayout>